<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/newRecipeName"
                    android:textCursorDrawable = "@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:ems="10"
                    android:hint="Recipe name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/newRecipePrepTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:ems="10"
                    android:hint="Prep time in minutes"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textCursorDrawable="@null" />

                <EditText
                    android:id="@+id/newRecipeCookTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:ems="10"
                    android:hint="Cook time in minutes"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textCursorDrawable="@null" />

                <EditText
                    android:id="@+id/newRecipeServingSize"
                    android:textCursorDrawable = "@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/colorAccent"
                    android:ems="10"
                    android:hint="Serving size"
                    android:inputType="number"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredients"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rv_new_recipe_ingredients"/>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginVertical="5dp">

                <Button
                    android:layout_width="46dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/add"
                    android:onClick="createNewLineOfIngredient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.158"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:layout_width="46dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/remove"
                    android:onClick="removeLastLine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.842"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description/Steps"
                android:textAlignment="center"
                android:textSize="24sp" />

            <MultiAutoCompleteTextView
                android:id="@+id/newRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:hint="Steps and or description"
                android:padding="10dp"
                android:textCursorDrawable="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tags"
                android:textAlignment="center"
                android:textSize="24sp" />

            <MultiAutoCompleteTextView
                android:id="@+id/newRecipeTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:hint="Tags that help find the recipe. Tea,Cabbage,Onion..."
                android:padding="10dp"
                android:textCursorDrawable="@null" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="151dp"
                    android:layout_height="47dp"
                    android:drawableTop="@drawable/confirm"
                    android:onClick="finishRecipe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>