...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/white"
        android:backgroundTint="@color/colorPrimary"
...
        android:id="@+id/trash_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/create_btn"
        app:layout_constraintEnd_toEndOf="@+id/create_btn"
        app:srcCompat="@drawable/trash"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
...
